# python-project-lvl1

./: README.md  pyproject.toml
hexlet-code/brain-games/: brain_calc.py  brain_even.py  brain_games_start.py  brain_gcd.py  brain_prime.py  brain_progression.py  choice.py  common_part.py  main.py
hexlet-code/hexlet_code/brain_games/scripts/: brain_games.py
