[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Norik123 <83397313+Norik123@users.noreply.github.com>"]
packages = [{ include = "brain_games" },]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
